--- a/AOL_MachineLearning/src/App.css
+++ b/AOL_MachineLearning/src/App.css
@@ -5,6 +5,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
+  box-sizing: border-box;
 }
 
 body {
