--- a/AOL_MachineLearning/src/pages/home/homePage.css
+++ b/AOL_MachineLearning/src/pages/home/homePage.css
@@ -1,5 +1,20 @@
 .home-page {
-  padding-top: 100px;
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.home-page .form-container {
+  background-color: rgb(252, 252, 252);
+  padding: 50px;
+  padding-top: 35px;
+  border-radius: 6px;
+}
+
+.home-page .form-container .title {
+  font-size: 22px;
+  text-align: center;
+  margin-bottom: 35px;
+  font-weight: 600;
 }
 
 .home-page .content {
@@ -20,4 +35,11 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+}
+
+.home-page .map-container .map-label {
+  margin-bottom: 8px;
+  color: rgb(48, 48, 48);
+  font-size: 15px;
+  font-weight: 600;
 }
