--- a/AOL_MachineLearning/src/pages/home/homePage.css
+++ b/AOL_MachineLearning/src/pages/home/homePage.css
@@ -43,3 +43,19 @@
   font-size: 15px;
   font-weight: 600;
 }
+
+.home-page .form-container .predict-button {
+  background-color: var(--dark-green);
+  padding: 10px 0px;
+  text-align: center;
+  color: white;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 20px;
+  cursor: pointer;
+}
+
+.home-page .form-container .predict-button:hover {
+  background-color: #489e8d;
+}
