--- a/AOL_MachineLearning/src/pages/home/homePage.css
+++ b/AOL_MachineLearning/src/pages/home/homePage.css
@@ -1,61 +1,76 @@
 .home-page {
-  padding-top: 150px;
-  padding-bottom: 150px;
+	padding-top: 150px;
+	padding-bottom: 150px;
 }
 
 .home-page .form-container {
-  background-color: rgb(252, 252, 252);
-  padding: 50px;
-  padding-top: 35px;
-  border-radius: 6px;
+	background-color: rgb(252, 252, 252);
+	padding: 50px;
+	padding-top: 35px;
+	border-radius: 6px;
 }
 
 .home-page .form-container .title {
-  font-size: 22px;
-  text-align: center;
-  margin-bottom: 35px;
-  font-weight: 600;
+	font-size: 22px;
+	text-align: center;
+	margin-bottom: 35px;
+	font-weight: 600;
 }
 
 .home-page .content {
-  width: 100%;
-  display: flex;
-  gap: 35px;
+	width: 100%;
+	display: flex;
+	gap: 35px;
 }
 
 .home-page .content .left {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
 
 .home-page .content .right {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
 
 .home-page .map-container .map-label {
-  margin-bottom: 8px;
-  color: rgb(48, 48, 48);
-  font-size: 15px;
-  font-weight: 600;
+	margin-bottom: 8px;
+	color: rgb(48, 48, 48);
+	font-size: 15px;
+	font-weight: 600;
 }
 
 .home-page .form-container .predict-button {
-  background-color: var(--dark-green);
-  padding: 10px 0px;
-  text-align: center;
-  color: white;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: 600;
-  margin-top: 20px;
-  cursor: pointer;
+	background-color: var(--dark-green);
+	padding: 10px 0px;
+	text-align: center;
+	color: white;
+	border-radius: 5px;
+	font-size: 16px;
+	font-weight: 600;
+	margin-top: 20px;
+	cursor: pointer;
 }
 
 .home-page .form-container .predict-button:hover {
-  background-color: #489e8d;
+	background-color: #489e8d;
+}
+
+.home-page .prediction {
+	margin-top: 20px;
+	font-size: 25px;
+	color: var(--dark-green);
+	text-align: center;
+}
+
+.home-page .prediction b {
+	margin-top: 20px;
+	font-size: 25px;
+	font-weight: bold;
+	color: var(--dark-green);
+	text-align: center;
 }
